--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <canvas id="gradient-canvas"></canvas>
+    <!-- <canvas id="gradient-canvas"></canvas> -->
     <script>
       window.global = window;
     </script>
